--- a/index.ejs
+++ b/index.ejs
@@ -35,7 +35,7 @@
         <div id="msg"></div>
       </div>
     </div>
-    <div id="toppage" class="jumbotron" style="background-color:#3BAFDA">
+    <div id="toppage" class="jumbotron" style="color:white; background-color:#3BAFDA">
 		  <h1>
 			   <span class="glyphicon glyphicon-comment">CollaboStarterChat</span>
 		  </h1>
