readme修正　margin-top守勢

--- a/index.ejs
+++ b/index.ejs
@@ -21,9 +21,9 @@
     			<div class="input-group">
     				<span class="input-group-addon"><span class="glyphicon glyphicon-pencil"></span></span>
             <textarea id="message" name="message" class="form-control" rows="3"></textarea>
-    				<span class="input-group-btn">
+    				<div class="input-group-btn">
     					<button id="send" class="btn btn-primary"　>送信</button>
-    				</span>
+    				</div>
     			</div>
     			<!-- /input-group -->
     		</div>
@@ -35,9 +35,9 @@
         <div id="msg"></div>
       </div>
     </div>
-    <div id="toppage" class="jumbotron" style="color:white; background-color:#3BAFDA">
+    <div id="toppage" class="jumbotron" style="margin-top:10px; color:white; background-color:#3BAFDA">
 		  <h1>
-			   <span class="glyphicon glyphicon-comment">CollaboStarterChat</span>
+			   <span class="glyphicon glyphicon-comment"></span>CollaboStarterChat
 		  </h1>
 		  <h3>
 			   powered by Node.js v0.12.7
@@ -48,11 +48,11 @@
 					<div class="input-group">
 						<span class="input-group-addon">ユーザー名</span>
 						<input id="inputuser" type="text" name="username" class="form-control" placeholder="ユーザー名" required autofocus maxlength="20">
-						<span class="input-group-btn">
+						<div class="input-group-btn">
 							<button id="login" class="btn btn-success" type="submit">
 								<span class="glyphicon glyphicon-log-in"> 開始!</span>
 							</button>
-						</span>
+						</div>
 					</div>
 					<!-- /input-group -->
 				</div>
