--- a/index.ejs
+++ b/index.ejs
@@ -4,7 +4,7 @@
   <title>CollaboStarterChat</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
+  <link rel="shortcut icon" href="favicon.ico">
 
 </head>
 <body>
