--- a/index.ejs
+++ b/index.ejs
@@ -69,7 +69,7 @@
 
     socketio.on("connected", function(name) {});
     socketio.on("publish", function (data) { msgFunctions[data.type](data.value, data.user); });
-    socketio.on("disconnect", function () {});
+    socketio.on("disconnect", function () { showLogin() });
 
     // 2.イベントに絡ませる関数の定義
     function start(name) {
@@ -86,6 +86,15 @@
     function publishMessage() {
       socketio.emit("publish", {value: $('#message').val()});
       $('#message').val('');
+    }
+
+    //接続がきれたらログイン画面を表示する
+    function showLogin() {
+      $('#loginform').show();
+      $('#toppage').show();
+      $('#chatform').hide();
+      $('#msg').hide();
+      $('#myName').val('');
     }
 
     // ローカルでの処理　を種別に関数
