--- a/index.ejs
+++ b/index.ejs
@@ -69,7 +69,7 @@
 
     socketio.on("connected", function(name) {});
     socketio.on("publish", function (data) { msgFunctions[data.type](data.value, data.user); });
-    socketio.on("disconnect", function () { showLogin() });
+    socketio.on("disconnect", function () { resetview() });
 
     // 2.イベントに絡ませる関数の定義
     function start(name) {
@@ -89,11 +89,11 @@
     }
 
     //接続がきれたらログイン画面を表示する
-    function showLogin() {
+    function resetview() {
       $('#loginform').show();
       $('#toppage').show();
       $('#chatform').hide();
-      $('#msg').hide();
+      $('#msg').empty().hide();
       $('#myName').val('');
     }
 
