--- a/index.ejs
+++ b/index.ejs
@@ -31,7 +31,7 @@
     			<!-- /input-group -->
     		</div>
     		<!-- /.col-lg-6 -->
-    		<div class="col-lg-6">
+    		<div id="userlistroot" class="col-lg-6">
           <% for (var i = 0; i < previousUsrs.count; i++) { %>
             <span class="label label-default userlist"><%= previousUsrs.get(i) %></span>
           <% } %>
@@ -96,6 +96,8 @@
         domMsg.addClass('alert alert-success').append($('<div>').append(user + 'が' + msg));
 
         msgArea.prepend(domMsg);
+        var user_name = $('<span></span>').addClass('label label-default userlist').text(user);
+        $('#userlistroot').append(user_name);
       },
 
     //..退室通知用
