--- a/index.ejs
+++ b/index.ejs
@@ -189,7 +189,7 @@
     if ($('#myName').val() != "") {
       $('#loginform').hide();
       //$('#toppage').hide();
-      restart(myName);
+      start(myName);
     } else {
       $('#chatform').hide();
       $('#msg').hide();
