--- a/index.ejs
+++ b/index.ejs
@@ -110,6 +110,15 @@
 
         msgArea.prepend(domMsg);
         $('#user_' + user ).remove();
+
+        //２つ部ブラウザを立ち上げた時の対応　自分の退室指示をうけとったら初期化する
+        if $('#myName').val() == user) {
+          $('#loginform').show();
+          $('#chatform').hide();
+          $('#msg').hide();
+          $('#user_name_area').html('<span class="glyphicon glyphicon-user"> ユーザー名</span>:');
+          $('#myName').val('');
+        }
       },
     //..その他のメッセージ
     publish:
