--- a/index.ejs
+++ b/index.ejs
@@ -106,6 +106,7 @@
         }
         var user_name = $('<span></span>').addClass('label label-default userlist').attr('id', 'user_' + user).text(user);
         $('#userlistroot').append(user_name);
+        alert("appnend()");
       },
 
     //..退室通知用
@@ -115,6 +116,7 @@
         domMsg.addClass('alert alert-danger').append($('<div>').append(user + 'が' + msg));
 
         msgArea.prepend(domMsg);
+        alert("remove();");
         $('#user_' + user ).remove();
 
         //２つ部ブラウザを立ち上げた時の対応　自分の退室指示をうけとったら反映する
