--- a/index.ejs
+++ b/index.ejs
@@ -68,7 +68,7 @@
     		<div id="userlistroot" class="col-lg-6">
           <p>参加ユーザ</p>
           <% for (var i = 0; i < users.length; i++) { %>
-            <span class="label label-default userlist" id="<%= users[i] %>"><%= users[i] %></span>
+            <span class="label label-default userlist" id="user_<%= users[i] %>"><%= users[i] %></span>
           <% } %>
     		</div>
     		<!-- /.col-lg-6 -->
